[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = ["development-tools"]
description = "A syntax extension providing higher-order attributes to Rust."
documentation = "https://regexident.github.io/apply_attr"
homepage = "https://github.com/regexident/apply_attr"
keywords = ["higher-order", "attribute", "apply"]
license = "MPL-2.0"
name = "apply_attr"
readme = "README.md"
repository = "https://github.com/regexident/apply_attr"
version = "0.2.4"

[dependencies]
bitflags = "^0.7.0"
compiletest_rs = "0.2.5"

[dev-dependencies]
compiletest_rs = "0.2.1"

[lib]
crate-type = ["dylib"]
name = "apply_attr"
